# GC2ER

./: .gitignore  CMakeLists.txt  README.md  build-debug.sh
in/: paravan.gcode
src/: ArgumentParser.cpp  ArgumentParser.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  GcodeProcess.cpp  GcodeProcess.hpp  Postprocess.cpp  Postprocess.hpp  main.cpp
template/GC2ER/Project/: _global.erd  _system.erd
template/GC2ER/Project/NewProject.er/: NewProgram.erp
